--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "firebase": "^10.5.2",
     "mongoose": "^7.6.0",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
