--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.0",
     "encoding": "^0.1.13",
     "firebase": "^10.5.2",
     "mongoose": "^7.6.0",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-youtube": "^10.1.0"
   },
