--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-modal": "^3.16.1",
     "react-youtube": "^10.1.0"
   },
   "devDependencies": {
