--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.0",
     "encoding": "^0.1.13",
